# livrariadjango

./: .gitignore  db.sqlite3  livraria_bkp.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: admin.py
livraria/migrations/: 0001_initial.py  0002_autor_editora_livro.py  0002_livro_capa.py  0003_livro_autores.py  0003_usuario_foto.py
livraria/models/: __init__.py  livro.py  usuario.py
livraria/serializers/: __init__.py  livro.py  usuario.py
livraria/views/: __init__.py  livro.py  usuario.py
